crates/fluvio-connector-derive/tests/ui/wrong_rust_type.rs
use fluvio_connector_derive::connector;

#[connector(source)]
mod start {}
